# Skyblock-Tools

./: .gitignore  .replit  Procfile  README.md  api_example.json  app.py  database.json  deletor.py  example_item.json  flask_app.py  items.json  logging_setup.py  main.py  main.py.lprof  models.py  pyproject.toml  requirements.txt
constants/: auctionables.json  bazaarables.json  craftables.json  forgables.json
data/: dump.json  vanilla_items.json
static/: style.css
templates/: base.html  bazaar_flipper_data.html  bazaarflipper.html  craft_flipper_data.html  craftflipper.html  forge_flipper_data.html  forgeflipper.html  index.html
