[tool.poetry]
name = "repl_python3_Flipping-Website"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
GitPython = "^3.1.26"
pandas = "^1.4.1"
bitdotio = "^1.0.10-beta.1"
SQLAlchemy = "^1.4.32"
psycopg2-binary = "^2.9.3"
replit = "^3.2.4"
aiohttp = "^3.8.1"
asyncpixel = "^1.3.1"
pprofile = "^2.1.0"
line-profiler = "^3.5.1"
pyinstrument = "^4.1.1"
aiofiles = "^0.8.0"
pytimeparse = "^1.1.8"
uvicorn = "^0.17.6"
fastapi = "^0.78.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
