[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
pytimeparse = "^1.1.8"
requests = "^2.28.0"
pandas = "^1.4.2"
aiofiles = "^0.8.0"
pydantic = "^1.9.1"
Flask = "^2.1.2"
fastapi = "^0.78.0"
NBT = "^1.5.1"
pyinstrument = "^4.1.1"
uvicorn = "^0.17.6"
GitPython = "^3.1.27"
fastapi-utils = "^0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"